--- a/client/src/pages/Auth/auth.scss
+++ b/client/src/pages/Auth/auth.scss
@@ -163,3 +163,34 @@ button.google {
 		padding: 20px 10px;
 	}
 }
+
+  
+  .file-chosen{
+    margin-left: 0.3rem;
+    font-family: sans-serif;
+  }
+  .file-field {
+    display: flex;
+    align-items: center;
+    label {
+        background-color: $mainColor;
+        color: white;
+        padding: 0.5rem;
+        font-family: sans-serif;
+        border-radius: 0.3rem;
+        cursor: pointer;
+        display:inline-block;
+    
+    }
+    .chosen-image {
+        width: 3rem;
+        height: 3rem;
+        border-radius:50%;
+        display: inline-block;
+        margin-left:1rem;
+    }
+    .file-chosen{
+        margin-left: 0.3rem;
+        font-family: sans-serif;
+    }
+  }
