add the feature update account

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import '../pages/Auth/auth.scss';
 @import '../pages/Home/home.scss';
+@import '../pages/Home/Account.scss';
 @import './grid.scss';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/solid';
